<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    
    android:columnCount="6"
    android:rowCount="6"
    android:background="#000000"
        
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <!-- <TextView
        android:text=""
        android:textSize="92sp"
        
        android:layout_columnSpan="6"
        android:layout_rowSpan="6"
        android:layout_gravity="center_horizontal"
        /> -->
    
    <TextView
        android:text="@string/tv_Heading"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        
        android:layout_row="4"
        
        android:layout_columnSpan="6"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView
        android:text="@string/tv_UserName"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        />
    
    <EditText 
        android:id="@+id/etUserName"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_width="wrap_content" 
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:ems="12"
        android:inputType="text"
        />
    
    <TextView 
        android:text="@string/tv_Password"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        />
    
    <EditText 
        android:id="@+id/etPassword"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        
        android:layout_width="wrap_content"        
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:ems="12"
        android:inputType="textPassword"
        />
    <Button 
        
        android:id="@+id/btCancel"
        android:textColor="#FFFFFF"
        
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/bt_Cancel"
        />
    
    <Button 
        
        android:id="@+id/btLogin"
        android:textColor="#FFFFFF"
        
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:text="@string/bt_Login"
        />
    
    <Button
        android:id="@+id/btNewUser"
        android:textSize="18sp"
        android:textColor="#0000FF"
        android:background="#000000"
        android:layout_columnSpan="6"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_NewUser"
        />
    
    <Space
        android:layout_columnSpan="6"
        android:layout_gravity="fill" 
        />

    

</GridLayout>